--- a/index.html
+++ b/index.html
@@ -2,16 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Socket.IO Chat App</title>
-    <link
-      rel="icon"
-      type="image/x-icon"
-      href="https://cdn-icons-png.freepik.com/512/5962/5962463.png"
-    />
+    <title>KS Chat App</title>
+    <link rel="icon" type="image/x-icon" href="/assets/images/favicon.png" />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>Socket.IO Chat App</h1>
+    <h1>KS Chat App</h1>
 
     <div id="chatbox"></div>
     <div id="typing"></div>
@@ -23,7 +19,7 @@
       <button id="sendButton">Send</button>
     </div>
 
-    <script src="https://cdn.socket.io/4.7.5/socket.io.min.js"></script>
+    <script src="/assets/js/socket.io.min.js"></script>
     <script type="module" src="script.js"></script>
   </body>
 </html>
