--- a/index.html
+++ b/index.html
@@ -2,34 +2,199 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title id="appTitle">KS Chat App</title>
+    <link rel="icon" type="image/png" href="/assets/images/favicon.png" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
     />
-    <title>KS Chat App</title>
-    <link rel="icon" type="image/x-icon" href="/assets/images/favicon.png" />
     <link rel="stylesheet" href="style.css" />
-    <link rel="manifest" href="/manifest.json" />
+    <link rel="manifest" href="manifest.json" />
   </head>
 
   <body>
-    <h1>KS Chat App</h1>
+    <!-- AUTH VIEW -->
+    <div id="authView" class="auth-view">
+      <div class="auth-card">
+        <h2>Welcome to <span class="brand">KS Chat App</span></h2>
+        <p class="subtitle">Connect instantly with your friends</p>
 
-    <div id="chatbox"></div>
-    <div id="typing"></div>
+        <div class="tab-container">
+          <button id="loginTab" class="tab-btn active">Login</button>
+          <button id="registerTab" class="tab-btn">Register</button>
+        </div>
 
-    <div class="input-container">
-      <input type="text" id="usernameInput" placeholder="Your name" />
+        <!-- LOGIN FORM -->
+        <form id="loginForm" class="auth-form">
+          <label for="loginIdentifier"
+            >Username or Email <span class="required">*</span></label
+          >
+          <input
+            id="loginIdentifier"
+            type="text"
+            placeholder="Username or Email"
+            required
+          />
 
-      <div class="message-area">
-        <input type="text" id="messageInput" placeholder="Type a message..." />
-        <button id="emojiButton" title="Add emoji">😊</button>
+          <label for="loginPassword"
+            >Password <span class="required">*</span></label
+          >
+          <input
+            id="loginPassword"
+            type="password"
+            placeholder="Password"
+            required
+          />
+
+          <button type="submit" class="primary-btn">Login</button>
+        </form>
+
+        <!-- REGISTER FORM -->
+        <form id="registerForm" class="auth-form hidden">
+          <label for="regDisplayName">Full Name</label>
+          <input
+            id="regDisplayName"
+            type="text"
+            placeholder="Display Name (optional)"
+          />
+
+          <label for="regUsername"
+            >Username <span class="required">*</span></label
+          >
+          <input id="regUsername" type="text" placeholder="Username" required />
+
+          <label for="regEmail">Email</label>
+          <input id="regEmail" type="email" placeholder="Email (optional)" />
+
+          <label for="regPassword"
+            >Password <span class="required">*</span></label
+          >
+          <input
+            id="regPassword"
+            type="password"
+            placeholder="Password"
+            required
+          />
+
+          <button type="submit" class="primary-btn">Register</button>
+        </form>
+      </div>
+    </div>
+
+    <!-- MAIN CHAT VIEW -->
+    <div id="mainView" class="main-view" style="display: none">
+      <div class="chat-container">
+        <!-- Sidebar for Conversations -->
+        <div class="sidebar">
+          <div class="sidebar-header">
+            <span id="meDisplay"></span>
+            <button id="logoutBtn" class="logout-btn">
+              <i class="fas fa-sign-out-alt"></i> Logout
+            </button>
+          </div>
+          <div class="conversations-section">
+            <button id="openGroupModalBtn" class="new-chat-btn">
+              Create New Group
+            </button>
+          </div>
+          <input
+            id="searchUsersInput"
+            type="text"
+            placeholder="Search users with name"
+            class="search-input"
+          />
+          <ul id="searchedUsersList" class="users-list"></ul>
+          <ul id="conversationsList" class="conversations-list"></ul>
+        </div>
+
+        <!-- Chat Panel -->
+        <div class="chat-panel">
+          <div class="chat-header">
+            <button id="backBtn" class="back-btn" style="display: none">
+              <i class="fas fa-arrow-left"></i>
+            </button>
+            <div class="chat-header-content">
+              <div class="chat-header-title">
+                <div class="conv-avatar" id="convAvatar"></div>
+                <h2 id="convTitle" class="group-title">
+                  Select a conversation
+                </h2>
+              </div>
+              <div
+                id="convMembers"
+                class="conv-members"
+                style="display: none"
+              ></div>
+            </div>
+          </div>
+
+          <div id="chatMessages" class="chat-messages"></div>
+
+          <div id="typing" class="typing"></div>
+
+          <form id="messageForm" class="chat-input">
+            <input
+              id="messageInput"
+              type="text"
+              placeholder="Type your message..."
+              required
+            />
+            <button type="button" id="emojiBtn" class="emoji-btn">
+              <i class="far fa-smile"></i>
+            </button>
+            <button type="submit" id="sendButton" class="send-btn">
+              <i class="fas fa-paper-plane"></i>
+            </button>
+          </form>
+        </div>
       </div>
 
-      <button id="sendButton">Send</button>
+      <!-- Group Modal -->
+      <div id="groupModal" class="modal" style="display: none">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h3>Create Group</h3>
+            <button id="closeGroupModalBtn" class="close-modal-btn">
+              &times;
+            </button>
+          </div>
+
+          <input id="groupTitle" type="text" placeholder="Group Title" />
+          <input
+            id="groupMemberSearch"
+            type="text"
+            placeholder="Search members by name..."
+          />
+          <ul id="groupMembersList" class="users-list"></ul>
+          <div id="selectedMembers" class="selected-members"></div>
+          <button id="createGroupBtn" class="primary-btn">Create</button>
+        </div>
+      </div>
     </div>
 
     <script src="/assets/js/socket.io.min.js"></script>
     <script type="module" src="script.js"></script>
+
+    <script>
+      const loginTab = document.getElementById("loginTab");
+      const registerTab = document.getElementById("registerTab");
+      const loginForm = document.getElementById("loginForm");
+      const registerForm = document.getElementById("registerForm");
+
+      loginTab.addEventListener("click", () => {
+        loginTab.classList.add("active");
+        registerTab.classList.remove("active");
+        loginForm.classList.remove("hidden");
+        registerForm.classList.add("hidden");
+      });
+
+      registerTab.addEventListener("click", () => {
+        registerTab.classList.add("active");
+        loginTab.classList.remove("active");
+        registerForm.classList.remove("hidden");
+        loginForm.classList.add("hidden");
+      });
+    </script>
   </body>
 </html>
