--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         <ul id="conversationsList" class="conversations-list"></ul>
 
         <!-- Loading spinner -->
-        <div id="loadingSpinner" style="display: none; text-align: center; padding: 10px">
+        <div id="loadingSpinner" class="loading">
           Loading...
         </div>
       </div>
