--- a/index.html
+++ b/index.html
@@ -153,6 +153,7 @@
               <div class="drawer-info">
                 <div id="drawerName" class="drawer-name"></div>
                 <div id="drawerUsername" class="drawer-username"></div>
+                <div class="drawer-email" id="drawerEmail"></div>
               </div>
             </div>
 
