--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
             <li><i class="fas fa-address-book"></i> Contacts</li>
             <li><i class="fas fa-bookmark"></i> Saved Messages</li>
             <li><i class="fas fa-cog"></i> Settings</li>
-            <li><i class="fas fa-bell"></i> Notifications</li>
+            <li id="drawerNotificationBell"><i class="fas fa-bell"></i> Notifications</li>
             <li><i class="fas fa-question-circle"></i> Help</li>
           </ul>
 
