--- a/index.html
+++ b/index.html
@@ -83,6 +83,10 @@
           </div>
 
           <div class="icon-group">
+            <a href="social.html" class="icon-btn icon-link">
+              <i class="fab fa-twitter"></i>
+            </a>
+
             <button id="toggleSuggestedBtn" class="icon-btn" title="Toggle suggested users">
               <i class="fas fa-user-plus"></i>
             </button>
@@ -127,7 +131,9 @@
             <li><i class="fas fa-address-book"></i> Contacts</li>
             <li><i class="fas fa-bookmark"></i> Saved Messages</li>
             <li><i class="fas fa-cog"></i> Settings</li>
-            <li id="drawerNotificationBell"><i class="fas fa-bell"></i> Notifications</li>
+            <li id="drawerNotificationBell">
+              <i class="fas fa-bell"></i> Notifications
+            </li>
             <li><i class="fas fa-question-circle"></i> Help</li>
           </ul>
 
