--- a/social.html
+++ b/social.html
@@ -19,7 +19,7 @@
     </div>
     <div class="actions">
       <!-- Search -->
-      <input type="text" class="active" id="postSearchInput" placeholder="Search posts..." />
+      <input type="text" id="postSearchInput" placeholder="Search posts..." />
 
       <button id="toggleSearchBtn" class="icon-btn" title="Search">
         <i class="fas fa-search"></i>
