--- a/social.html
+++ b/social.html
@@ -34,6 +34,25 @@
     </div>
   </header>
 
+  <!-- Right Sidebar Drawer -->
+  <div id="rightSidebar" class="sidebar">
+    <button id="closeSidebar" class="close-btn">&times;</button>
+    <div class="sidebar-content">
+      <!-- User Avatar & Info -->
+      <div class="user-info">
+        <div class="avatar" id="drawerAvatar"></div>
+        <div class="user-details">
+          <p id="drawerDisplayName"></p>
+          <p id="drawerUsername"></p>
+          <p id="drawerEmail"></p>
+        </div>
+      </div>
+
+      <!-- Sign Out Button -->
+      <button id="signOutBtn" class="signout-btn">Sign Out</button>
+    </div>
+  </div>
+
   <main class="container">
     <!-- Stories Bar -->
     <section id="storiesBar" class="stories-bar"></section>
