--- a/social.html
+++ b/social.html
@@ -16,6 +16,7 @@
   <header class="topbar">
     <div class="avatar-container">
       <div class="avatar" id="userAvatar">U</div>
+      <span class="display-name" id="userDisplayName">User</span>
     </div>
     <div class="actions">
       <!-- Search -->
@@ -140,6 +141,7 @@
       <h3>Edit Post</h3>
       <textarea id="editText" placeholder="What's on your mind?"></textarea>
       <input type="text" id="editMediaUrl" placeholder="Paste image/video URL (optional)" style="
+            width: 100%;
             margin: 12px 0;
             padding: 12px;
             border-radius: 12px;
